--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y qemu-user-static
 
+      - name: Setup podman and buildah
+        uses: zyclonite/setup-podman@v1
+
       - name: Build Image
         run: buildah bud --platform ${{ matrix.platform.name }} -f ./Dockerfile -t ${{ env.IMAGE_NAME }}:${{ matrix.platform.tag }} .
 
